; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_main.c_player_crosshair_distance.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_main.c_player_crosshair_distance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { float, float, float, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @player_crosshair_distance(%struct.TYPE_8__* %0, %struct.TYPE_8__* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  %13 = alloca float, align 4
  %14 = alloca float, align 4
  %15 = alloca float, align 4
  %16 = alloca float, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %4, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  store %struct.TYPE_7__* %18, %struct.TYPE_7__** %5, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  store %struct.TYPE_7__* %20, %struct.TYPE_7__** %6, align 8
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  %23 = call float @player_player_distance(%struct.TYPE_8__* %21, %struct.TYPE_8__* %22)
  store float %23, float* %7, align 4
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 4
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 3
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @get_sight_vector(i32 %26, i32 %29, float* %8, float* %9, float* %10)
  %31 = load float, float* %7, align 4
  %32 = load float, float* %8, align 4
  %33 = fmul float %32, %31
  store float %33, float* %8, align 4
  %34 = load float, float* %7, align 4
  %35 = load float, float* %9, align 4
  %36 = fmul float %35, %34
  store float %36, float* %9, align 4
  %37 = load float, float* %7, align 4
  %38 = load float, float* %10, align 4
  %39 = fmul float %38, %37
  store float %39, float* %10, align 4
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  %42 = load float, float* %41, align 4
  %43 = load float, float* %8, align 4
  %44 = fadd float %42, %43
  store float %44, float* %11, align 4
  %45 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %45, i32 0, i32 1
  %47 = load float, float* %46, align 4
  %48 = load float, float* %9, align 4
  %49 = fadd float %47, %48
  store float %49, float* %12, align 4
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 2
  %52 = load float, float* %51, align 4
  %53 = load float, float* %10, align 4
  %54 = fadd float %52, %53
  store float %54, float* %13, align 4
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = load float, float* %56, align 4
  %58 = load float, float* %11, align 4
  %59 = fsub float %57, %58
  store float %59, float* %14, align 4
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 1
  %62 = load float, float* %61, align 4
  %63 = load float, float* %12, align 4
  %64 = fsub float %62, %63
  store float %64, float* %15, align 4
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %66 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %65, i32 0, i32 2
  %67 = load float, float* %66, align 4
  %68 = load float, float* %13, align 4
  %69 = fsub float %67, %68
  store float %69, float* %16, align 4
  %70 = load float, float* %14, align 4
  %71 = load float, float* %14, align 4
  %72 = fmul float %70, %71
  %73 = load float, float* %15, align 4
  %74 = load float, float* %15, align 4
  %75 = fmul float %73, %74
  %76 = fadd float %72, %75
  %77 = load float, float* %16, align 4
  %78 = load float, float* %16, align 4
  %79 = fmul float %77, %78
  %80 = fadd float %76, %79
  %81 = call float @sqrtf(float %80) #3
  ret float %81
}

declare dso_local float @player_player_distance(%struct.TYPE_8__*, %struct.TYPE_8__*) #1

declare dso_local i32 @get_sight_vector(i32, i32, float*, float*, float*) #1

; Function Attrs: nounwind
declare dso_local float @sqrtf(float) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
